@@ -5,6 +5,10 @@
  Developed and maintained by Matthias Ettrich (ettrich@kde.org)
 
 
+2000-06-09  David Faure  <faure@kde.org>
+
+     * ported to NETWM
+
 1999-11-20  David Faure  <faure@kde.org>
 
      * ported to KWinModule
